@@ -1895,7 +1895,7 @@ public class GroupManager extends JavaPlugin {
 
 			case manselect:
 				if (args.length < 1) {
-					sender.sendMessage(ChatColor.RED + "Review your arguments count! (/<command> <world>)");
+					sender.sendMessage(ChatColor.RED + "Review your arguments count! (/manselect <world>)");
 					sender.sendMessage(ChatColor.YELLOW + "Worlds available: ");
 					ArrayList<OverloadedWorldHolder> worlds = worldsHolder.allWorldsDataList();
 					auxString = "";
@@ -1933,6 +1933,32 @@ public class GroupManager extends JavaPlugin {
 				}
 				selectedWorlds.remove(sender);
 				sender.sendMessage(ChatColor.YELLOW + "You have removed your world selection. Working with current world(if possible).");
+
+				return true;
+				
+			case mancheckw:
+				if (args.length < 1) {
+					sender.sendMessage(ChatColor.RED + "Review your arguments count! (/mancheckw <world>)");
+					sender.sendMessage(ChatColor.YELLOW + "Worlds available: ");
+					ArrayList<OverloadedWorldHolder> worlds = worldsHolder.allWorldsDataList();
+					auxString = "";
+					for (int i = 0; i < worlds.size(); i++) {
+						auxString += worlds.get(i).getName();
+						if ((i + 1) < worlds.size()) {
+							auxString += ", ";
+						}
+					}
+					sender.sendMessage(ChatColor.YELLOW + auxString);
+					return false;
+				}
+				
+				
+				dataHolder = worldsHolder.getWorldData(auxString);
+				
+				sender.sendMessage(ChatColor.YELLOW + "You have selected world '" + dataHolder.getName() + "'.");
+				sender.sendMessage(ChatColor.YELLOW + "This world is using the following data files..");
+				sender.sendMessage(ChatColor.YELLOW + "Groups: " + dataHolder.getGroupsFile().getAbsolutePath());
+				sender.sendMessage(ChatColor.YELLOW + "Users: " + dataHolder.getUsersFile().getAbsolutePath());
 
 				return true;
 
